--- a/css/common.css
+++ b/css/common.css
@@ -152,3 +152,30 @@ section {
   display: none !important;
 }
 
+/* Footer */
+#main_footer {
+  color: #fff;
+  width: 100%;
+  height: 200px;
+  background: #000;
+}
+#main_footer .container {
+  margin-top: 10px;
+}
+#main_footer  h1 {
+  margin-bottom: 25px;
+}
+#main_footer  img {
+  width: 250px;
+}
+#main_footer  p, #main_footer  address {
+  font-style: normal;
+  font-weight: 200;
+  font-size: 12px;
+  line-height: 1.6em;
+}
+#main_footer .copyright {
+  margin-top: 10px;
+  font-size: 8px;
+}
+
